<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">PlugNotes</string>
  <string name="snap_label">Snap</string>
  <string name="search_label">Search</string>
  <string name="about_label">About</string>
  <string name="about_text">This app is about STFU</string>
  <string name="camera_button_label">Snap</string>
  <string name="camera_label">Take a screenshot</string>
  <string name="doodle_clear">Clear</string>
  <string name="doodle_save">Save</string>
  <string name="notebooks">Notebooks</string>
  <string name="search_notebooks">Search Notebooks</string>
  <string name="about_page">About</string>
  <string name="about">This project is copyrighted by Team Alt+Tab Na Lang Permi a.k.a JACK</string>
  <string name="doodle_page">Doodle</string>
  <string name="notebookslist_page">Notebooks</string>
  <string name="noteslist_page">Notes</string>
  <string name="search_notes">Search Notes</string>
  <string name="registration_page">Registration</string>
  <string name="fname">First Name</string>
  <string name="lname">Last Name</string>
  <string name="uname">Username</string>
  <string name="pword">Password</string>
  <string name="confirmpword">Confrim Password</string>
  <string name="emailadd">Email Address</string>
  <string name="enter_title">Enter Title: </string>
  <string name="thisisuname">This is User Name.</string>
  <string name="createnote">Create Note</string>
  <string name="allnotes">All Notes</string>
  <string name="doodlenote">Doodle</string>
  <string name="notebooksbutton">Notebooks</string>
  <string name="note_title">Note Title</string>
  <string name="note_content">Note Content</string>
  <string name="save">Save</string>
  <string name="undo">Undo</string>
  <string name="synch">Synchronize</string>
  <string name="logout">Logout</string>
  <string name="add_notebook">Add Notebook</string>
  <string name="add_note">Add Note</string>
  <string name="add_title">Add Title</string>
  <string name="take_snapshot">Take Snapshot</string>
  <string name="cancel">Cancel</string>
  <string name="recognitionFailed">failed to recognize :(</string>
  <string name="attach">Attach</string>
  <string name="demo_checkbutton">Local</string>
  <string name="team">by: JACK</string>
  <string name="clear">Clear</string>
  <string name="open">Open</string>
  <string name="redo">Redo</string>
  <string name="color">Color</string>
</resources>
